Replace all occurences of base_contains by bb.utils.contains
This is to solve the warning "base_contains is deprecated,
please use bb.utils.contains instead" during build.

Change-Id: Ief0640bbfdf6bd26c85a7b462d4ef9406b10d9ad

--- a/conf/distro/msm-perf.conf
+++ b/conf/distro/msm-perf.conf
@@ -24,5 +24,5 @@ DISTRO_FEATURES += "emmc-boot"
 PERF_BUILD = "1"
 
 # TEMP FIX: retain existing directory structure for base product image.
-DEPLOY_NAME ?= "${@base_contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}-perf"
+DEPLOY_NAME ?= "${@bb.utils.contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}-perf"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
