--- a/conf/distro/msm-user.conf
+++ b/conf/distro/msm-user.conf
@@ -27,5 +27,5 @@ PERF_BUILD = "1"
 USER_BUILD = "1"
 
 # TEMP FIX: retain existing directory structure for base product image.
-DEPLOY_NAME ?= "${@base_contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}-user"
+DEPLOY_NAME ?= "${@bb.utils.contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}-user"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
