--- a/conf/distro/msm.conf
+++ b/conf/distro/msm.conf
@@ -21,5 +21,5 @@ DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ${MI
 DISTRO_FEATURES += "emmc-boot"
 
 # TEMP FIX: retain existing directory structure for base product image.
-DEPLOY_NAME ?= "${@base_contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}"
+DEPLOY_NAME ?= "${@bb.utils.contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
