--- a/conf/distro/mdm.conf
+++ b/conf/distro/mdm.conf
@@ -24,5 +24,5 @@ DISTRO_FEATURES += "nand-boot"
 DISTRO_FEATURES += "ro-rootfs"
 
 # TEMP FIX: retain existing directory structure for base product image.
-DEPLOY_NAME ?= "${@base_contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}"
+DEPLOY_NAME ?= "${@bb.utils.contains('PRODUCT', 'base', '${MACHINE}', '${MACHINE}-${PRODUCT}', d)}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
