--- a/conf/machine/apq8053-compact.conf
+++ b/conf/machine/apq8053-compact.conf
@@ -22,7 +22,7 @@ KERNEL_PERF_CMD_PARAMS = "noinitrd ro androidboot.hardware=qcom ehci-hcd.park=3 
 DISTRO_FEATURES_append = " ro-rootfs"
 
 # Disable journalling for RO rootfs. Set the block size to 1024.
-IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
+IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
 BBMASK .= "|.*/*/recipes-security/selinux/selinux-config*"
 BBMASK .= "|.*/*/recipes-security/selinux/refpolicy-mls*"
