--- a/conf/machine/apq8053.conf
+++ b/conf/machine/apq8053.conf
@@ -30,7 +30,7 @@ DEFAULT_ENFORCING = "enforcing"
 DISTRO_FEATURES_append = " ro-rootfs"
 
 # Disable journalling for RO rootfs. Set the block size to 1024.
-IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
+IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
 # location packages
 DISTRO_FEATURES_append = " location-services"
