meta-qti-bsp: Fix pyro recipes compilation
Fix fetch error and warnings in site.conf
Fix compilation for recipes - ddclient, libpcap, lk.

Change-Id: Ie25fabe70a5c3c9057a3a2f4951744fe200a4854

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -40,11 +40,9 @@ YP_MIRROR  = "http://downloads.yoctoproject.org/mirror/sources/"
 CAF_MIRROR = "https://codeaurora.org/mirrored_source/quic/le"
 CAF_GIT    = "git://codeaurora.org/quic/le"
 
-PREMIRRORS_append = "https?$://.*/.* ${CAF_MIRROR}/\n \
-svn$://.*/.* ${CAF_MIRROR}/\n \
-git?$://.*/.* ${CAF_MIRROR}/\n \
-ftps?$://.*/.* ${CAF_MIRROR}/\n \
-https?$://.*/.* ${YP_MIRROR}/\n \
-svn$://.*/.* ${YP_MIRROR}/\n \
-git?$://.*/.* ${YP_MIRROR}/\n \
-ftps?$://.*/.* ${YP_MIRROR}/\n"
+PREMIRRORS_append = "https?$://.*/.* ${CAF_MIRROR}/\n"
+PREMIRRORS_append = "svn$://.*/.* ${CAF_MIRROR}/\n"
+PREMIRRORS_append = "git?$://.*/.* ${CAF_MIRROR}/\n"
+PREMIRRORS_append = "ftps?$://.*/.* ${CAF_MIRROR}/\n"
+PREMIRRORS_append = "svn$://.*/.* ${YP_MIRROR}/\n"
+PREMIRRORS_append = "git?$://.*/.* ${YP_MIRROR}/\n"
