--- a/conf/machine/apq8053-iot-mtp.conf
+++ b/conf/machine/apq8053-iot-mtp.conf
@@ -29,3 +29,10 @@ DISTRO_FEATURES_append = " location-services"
 
 # face recognition
 DISTRO_FEATURES_append = " face-recognition"
+
+# Multilib configuration
+# This sets any packages preprended with lib32- to be built with
+# the armv7a tuning (32 bit) instead of 64 bit aarch.
+require conf/multilib.conf
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "armv7a-neon"
