sdxpoorwills: update KERNEL_IMAGETYPE to zImage-dtb
dtb needs to be part of boot image now so dt parameter to mkbootimg is not
needed hence cleaned up msm-4.9 kernel recipe and updated sdxpoorwills.conf

Change-Id: I4f8d033ce9cd600c768551385d37dea275876f81

--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -6,6 +6,7 @@ require conf/machine/include/sdxpoorwills.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-msm-4.9"
 
+KERNEL_IMAGETYPE = "zImage-dtb"
 KERNEL_DTS_NAME = "sdxpoorwills"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x82000000"
