Set Type= to oneshot for mount-data service
Setting Type=oneshot ensure mounting of /data is complete
before systemd starts follow-up units.

Change-Id: I67905c2ac2d2d81fa0a6523a3daf2ce467edb005

--- a/recipes-core/systemd/systemd/mount-data.service
+++ b/recipes-core/systemd/systemd/mount-data.service
@@ -32,7 +32,10 @@ SourcePath=/etc/initscripts/mount-data
 After=var-volatile.mount
 
 [Service]
-Restart=no
+Type=oneshot
 RemainAfterExit=yes
 ExecStart=/etc/initscripts/mount-data start
 ExecStop=/etc/initscripts/mount-data stop
+
+[Install]
+WantedBy=local-fs.target
