apq8053-32-conf: Upgrade iproute2 version to 4.1.1
Change-Id: I8125ca5570a0197534c8d9b8ed717c709ef87457

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -26,5 +26,8 @@ DISTRO_FEATURES_append = " ro-rootfs"
 # face recognition
 DISTRO_FEATURES_append = " face-recognition"
 
+# iproute2 bump version to 4.1.1
+PREFERRED_VERSION_iproute2 = "4.1.1"
+
 # Disable journalling for RO rootfs. Set the block size to 1024.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
