--- a/conf/machine/apq8009-robot.conf
+++ b/conf/machine/apq8009-robot.conf
@@ -47,5 +47,6 @@ MKUBIFS_PERSIST_ARGS ?= "-m 2048 -e 126976 -c 4096 -j 2MiB -F -v"
 SYSTEM_VOLUME_SIZE ?= "200MiB"
 CACHE_VOLUME_SIZE ?= "37MiB"
 PERSIST_VOLUME_SIZE ?= "4MiB"
+SYSTEMRW_VOLUME_SIZE ?= "6MiB"
 PAGE_SIZE = '2048'
 DISTRO_FEATURES += "nand-boot"
