meta-qti-bsp: Update serial console tty node
Change the serial console dev node to msm0 for sdxpoorwills.

Change-Id: Ib0f99257a4a78a1c20bae95f9ea6fb117575e361

--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -15,4 +15,4 @@ KERNEL_PERF_DEFCONFIG = "sdxpoorwills-perf_defconfig"
 
 # Pull in security flags
 require ${COREBASE}/meta-qti-bsp/conf/distro/include/security_flags.inc
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_hsl_uart,0x78b1000"
+KERNEL_CMD_PARAMS = "noinitrd rw rootwait console=ttyMSM0,115200,n8 earlycon=msm_serial_dm,0x831000 no_console_suspend=1 androidboot.hardware=qcom androidboot.console=ttyMSM0"
