--- a/conf/distro/mdm.conf
+++ b/conf/distro/mdm.conf
@@ -21,7 +21,7 @@ DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ${MI
 DISTRO_FEATURES += "nand-boot"
 
 #Enable for Read only system
-DISTRO_FEATURES += "ro-rootfs"
+#DISTRO_FEATURES += "ro-rootfs"
 
 # Retain existing directory structure for base product image.
 # Append variants like '-perf', '-user', 'perf-minimal' etc to deploy dir.
