meta-qti-bsp: Adding users in LE.
Added system,radio,bluetooth,graphics,input,audio,
camera,adb,sensors,Apps,nobody as users.

Change-Id: I2aaaae932c696cdd84c85b27f3fcdc87244f686a

--- a/conf/distro/msm-user.conf
+++ b/conf/distro/msm-user.conf
@@ -33,5 +33,25 @@ DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRO
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
 
 EXTRA_USERS_PARAMS = "\
+ useradd -u 1000 -U system; \
+ useradd -u 1001 -U radio; \
+ useradd -u 1002 -U bluetooth; \
+ useradd -u 1003 -U graphics; \
+ useradd -u 1006 -U camera;\
+ useradd -u 2000 -U adb; \
+ useradd -u 3011 -U sensors; \
+ useradd -u 4000 -U apps; \
+ useradd -u 9999 -U nobody; \
+ usermod -L -e 1 system; \
+ usermod -L -e 1 radio; \
+ usermod -L -e 1 bluetooth; \
+ usermod -L -e 1 graphics; \
+ usermod -L -e 1 input; \
+ usermod -L -e 1 audio; \
+ usermod -L -e 1 camera; \
+ usermod -L -e 1 adb; \
+ usermod -L -e 1 sensors; \
+ usermod -L -e 1 Apps; \
+ usermod -L -e 1 nobody; \
  usermod -L -e 1 root; \
 "
