--- a/conf/distro/msm-perf.conf
+++ b/conf/distro/msm-perf.conf
@@ -3,7 +3,7 @@
 #@NAME: MSM-PERF
 #@DESCRIPTION: QTI Linux Distribution for MSM targets with performance orientation (glibc based)
 ################################################################################################
-
+INHERIT += "extrausers"
 require conf/distro/include/msm.inc
 
 # DISTRO CONFIGURATION
@@ -27,3 +27,28 @@ PERF_BUILD = "1"
 # Append variants like '-perf', '-user', 'perf-minimal' etc to deploy dir.
 DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}${@['-' + d.getVar('VARIANT', True), ''][d.getVar('VARIANT', True) == ('')]}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
+
+EXTRA_USERS_PARAMS = "\
+ useradd -u 1000 -U system; \
+ useradd -u 1001 -U radio; \
+ useradd -u 1002 -U bluetooth; \
+ useradd -u 1003 -U graphics; \
+ useradd -u 1004 -g input input; \
+ useradd -u 1005 -g audio audio; \
+ useradd -u 1006 -U camera;\
+ useradd -u 2000 -U adb; \
+ useradd -u 3011 -U sensors; \
+ useradd -u 4000 -U apps; \
+ useradd -u 9999 -U nobody; \
+ usermod -L -e 1 system; \
+ usermod -L -e 1 radio; \
+ usermod -L -e 1 bluetooth; \
+ usermod -L -e 1 graphics; \
+ usermod -L -e 1 input; \
+ usermod -L -e 1 audio; \
+ usermod -L -e 1 camera; \
+ usermod -L -e 1 adb; \
+ usermod -L -e 1 sensors; \
+ usermod -L -e 1 Apps; \
+ usermod -L -e 1 nobody; \
+"
