meta-qti-bsp: Added capabilities to wlan processes.
Added capabilities and permissions required to run
wlan processes as non-root user.

Change-Id: I37f1d0b9a0770ea6a67b877ff369e4102bf826bd

--- a/recipes-products/images/apq8053/apq8053-fsconfig.conf
+++ b/recipes-products/images/apq8053/apq8053-fsconfig.conf
@@ -1,4 +1,8 @@
 etc/sensors/sensor_def_qcomdev.conf 3011 1000 0644
 usr/bin/sensors.qcom 3011 0 0744 capabilities=0x400
+usr/bin/cnss_diag  1000 0 0744 capabilities=0x3000
+usr/sbin/wpa_supplicant  1000 0 0744 capabilities=0x3000
+usr/sbin/dhcpcd 1000 0 0744 capabilities=0x3c00
+usr/bin/ptt_socket_app 1000 0 0744 capabilities=0x1000
 build.prop 5002 5002 644
 etc/build.prop 5002 5002 644
