inittab: start qmmf user space as non root
qmmf-server, ipc-webserver and qmmf-webserver started as non-root process

Change-Id: Ic7785b2bbd122c71f9c1c38f7c318b87b051336d

--- a/recipes-core/busybox/files/apq8053/mdev.conf
+++ b/recipes-core/busybox/files/apq8053/mdev.conf
@@ -5,10 +5,10 @@ media1 camera:system 0660
 video[0-99]* camera:system 0660
 v4l-subdev[0-99]* camera:system 0660
 event-log-tags logd:logd 0644
-logd logd:logd 0666 =socket/
-logdr logd:logd 0666 =socket/
-logdw logd:logd 0222 =socket/
-fb[0-99]* root:graphics 0660 =graphics/
+socket/logd logd:logd 0666
+socket/logdr logd:logd 0666
+socket/logdw logd:logd 0222
+fb[0-99]* graphics:system 0660 =graphics/
 diag system:radio 0660
 cpu_dma_latency 0:0 0660
 fb0:0 44 0660
@@ -51,4 +51,7 @@ tun[0-9]* 0:0 0660 =net/
 mmcblk[0-9]*     0:6     660
 mmcblk[0-9]*p[0-9]* 0:6     660 */etc/mdev/automountsdcard.sh ${MDEV}
 [hs]d[a-z][0-9]* 0:0 660 */etc/mdev/automountsdcard.sh ${MDEV}
+
+binder 1000:1000 0666
+
 .* 1000:1000 0660
