--- a/recipes-products/images/apq8053/apq8053-fsconfig.conf
+++ b/recipes-products/images/apq8053/apq8053-fsconfig.conf
@@ -6,3 +6,30 @@ usr/sbin/dhcpcd 1000 0 0744 capabilities=0x3c00
 usr/bin/ptt_socket_app 1000 0 0744 capabilities=0x1000
 build.prop 5002 5002 644
 etc/build.prop 5002 5002 644
+usr/bin/qmmf-webserver 5001 5001 0744 capabilities=0x3C02
+usr/bin/ipc-webserver 5001 5001 0744 capabilities=0x3C02
+data 0 1000 0775
+etc/passwd 0 0 0644
+system 1000 1000 775
+system/etc 1000 1000 775
+system/etc/camera 1006 1000 775
+system/etc/mm-mux 1000 1000 775
+system/etc/qmmf 5000 1000 775
+system/etc/camera/ar1335_chromatix.xml 1006 1000 444
+system/etc/camera/camera_config.xml 1006 1000 444
+system/etc/camera/imx230_chromatix.xml 1006 1000 444
+system/etc/camera/imx230_qc2002_chromatix.xml 1006 1000 444
+system/etc/camera/imx230_qc2002_with_gyro_chromatix.xml 1006 1000 444
+system/etc/camera/imx274_chromatix.xml 1006 1000 444
+system/etc/camera/imx377_chromatix.xml 1006 1000 444
+system/etc/camera/imx378_chromatix.xml 1006 1000 444
+system/etc/camera/imx477_chromatix.xml 1006 1000 444
+system/etc/camera/imx477_raw10_chromatix.xml 1006 1000 444
+system/etc/camera/imx477_raw12_chromatix.xml 1006 1000 444
+system/etc/camera/ov7251_chromatix.xml 1006 1000 444
+system/etc/camera/shdr-1x1.bin 1006 1000 444
+system/etc/mm-mux/ConfigFile.xml 1000 1000 444
+system/etc/qmmf/lens_ca_gpblack_GPversion_large.json 5000 1000 444
+system/etc/qmmf/qmmf_polaris_calib.bin 5000 1000 444
+system/etc/qmmf/yuv_cac_calib_nv12.json 5000 1000 444
+system/etc/qmmf/yuv_cac_calib_nv21.json 5000 1000 444
