--- a/conf/machine/apq8009.conf
+++ b/conf/machine/apq8009.conf
@@ -15,6 +15,9 @@ KERNEL_DEFCONFIG = "msm8909_defconfig"
 KERNEL_PERF_DEFCONFIG = "msm8909-perf_defconfig"
 KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci mem=512M"
 
+DISTRO_FEATURES_append = " selinux"
+DEFAULT_ENFORCING = "permissive"
+
 # Use systemd init manager.
 DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_append += "ro-rootfs"
