Set permissions for dev nodes and rmt_storage
Change-Id: I042dd8e076dc4f8b1968a870aee2101e30d118a6

--- a/recipes-products/images/apq8053/apq8053-fsconfig.conf
+++ b/recipes-products/images/apq8053/apq8053-fsconfig.conf
@@ -36,3 +36,4 @@ system/etc/qmmf/lens_ca_gpblack_GPversion_large.json 5000 1000 444
 system/etc/qmmf/qmmf_polaris_calib.bin 5000 1000 444
 system/etc/qmmf/yuv_cac_calib_nv12.json 5000 1000 444
 system/etc/qmmf/yuv_cac_calib_nv21.json 5000 1000 444
+sbin/rmt_storage 65534 1000 0754 capabilities=0x3C00
