--- a/recipes-core/busybox/files/apq8053/mdev.conf
+++ b/recipes-core/busybox/files/apq8053/mdev.conf
@@ -49,9 +49,12 @@ mouse.* 0:0 0660 =input/
 tun[0-9]* 0:0 0660 =net/
 
 mmcblk[0-9]*     0:6     660
-mmcblk[0-9]*p[0-9]* 0:6     660 */etc/mdev/automountsdcard.sh ${MDEV}
+mmcblk[0-9]*p[0-9]* 0:1000     660 */etc/mdev/automountsdcard.sh ${MDEV}
 [hs]d[a-z][0-9]* 0:0 660 */etc/mdev/automountsdcard.sh ${MDEV}
 
 binder 1000:1000 0666
+subsys_modem 1000:1000 0666
+subsys_adsp 1000:1000 0666
+uio.* 1000:1000 0660
 
 .* 1000:1000 0660
