--- a/recipes-products/images/apq8053/apq8053-fsconfig.conf
+++ b/recipes-products/images/apq8053/apq8053-fsconfig.conf
@@ -37,3 +37,4 @@ system/etc/qmmf/qmmf_polaris_calib.bin 5000 1000 444
 system/etc/qmmf/yuv_cac_calib_nv12.json 5000 1000 444
 system/etc/qmmf/yuv_cac_calib_nv21.json 5000 1000 444
 sbin/rmt_storage 65534 1000 0754 capabilities=0x3C00
+sbin/getslotsuffix 0 1000 0754
