--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -13,4 +13,4 @@ KERNEL_TAGS_OFFSET = "0x82000000"
 KERNEL_DEFCONFIG = "sdxpoorwills_defconfig"
 KERNEL_PERF_DEFCONFIG = "sdxpoorwills-perf_defconfig"
 
-KERNEL_CMD_PARAMS = "noinitrd rw rootwait console=ttyMSM0,115200,n8 no_console_suspend=1 androidboot.hardware=qcom androidboot.console=ttyMSM0"
+KERNEL_CMD_PARAMS = "noinitrd rw rootwait console=ttyMSM0,115200,n8 no_console_suspend=1 androidboot.hardware=qcom androidboot.console=ttyMSM0 lpm_levels.sleep_disabled=1"
