Add additional users and groups
Add additional users required to support running daemons as
non-root users

Change-Id: I592246043e7c6c3ac607b3c163eb90f14a350885

--- a/conf/distro/mdm.conf
+++ b/conf/distro/mdm.conf
@@ -3,7 +3,7 @@
 #@NAME: MDM
 #@DESCRIPTION: QTI Linux Distribution for MDM targets (glibc based)
 #############################################################################
-
+INHERIT += "extrausers"
 require conf/distro/include/msm.inc
 
 # DISTRO CONFIGURATION
