--- a/conf/distro/mdm-perf.conf
+++ b/conf/distro/mdm-perf.conf
@@ -15,7 +15,7 @@ VIRTUAL-RUNTIME_dev_manager ?= "busybox-mdev"
 DISTROOVERRIDES = "mdm:mdm-perf"
 
 # Basic distribution features
-DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ${MICRO_GOLD} ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ld-is-gold ${DISTRO_FEATURES_LIBC}"
 
 # MDMs are NAND based targets
 DISTRO_FEATURES += "nand-boot"
