Enable ROS in apq8009-robot and apq8096-drones separately

--- a/conf/machine/apq8009-robot.conf
+++ b/conf/machine/apq8009-robot.conf
@@ -23,6 +23,9 @@ VIRTUAL-RUNTIME_dev_manager = "udev"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_remove = "sysvinit"
 
+# ROS
+DISTRO_FEATURES_append = " ${VARIANT}"
+
 # Change Image features for systemd.
 IMAGE_DEV_MANAGER = "udev"
 IMAGE_INIT_MANAGER = "systemd"
@@ -44,7 +47,7 @@ MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 4096 -F -v"
 #PERSIST UBI Args
 MKUBIFS_PERSIST_ARGS ?= "-m 2048 -e 126976 -c 4096 -j 2MiB -F -v"
 
-SYSTEM_VOLUME_SIZE ?= "200MiB"
+SYSTEM_VOLUME_SIZE ?= "${@base_contains('VARIANT', 'ROS', '400MiB', '200MiB', d)}"
 CACHE_VOLUME_SIZE ?= "37MiB"
 PERSIST_VOLUME_SIZE ?= "4MiB"
 PAGE_SIZE = '2048'
