--- a/conf/machine/apq8096.conf
+++ b/conf/machine/apq8096.conf
@@ -27,6 +27,10 @@ DISTRO_FEATURES_append = " face-recognition"
 
 DISTRO_FEATURES_remove = "sysvinit"
 
+# ROS
+DISTRO_FEATURES_append = " ${VARIANT}"
+DISTRO_FEATURES_append = " ROS-32"
+
 # Use systemd init manager.
 DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
