meta-qti-bsp: Changing gid of reboot/halt in apq8053.
System reboot access is provided to rebooters group.

Change-Id: I4666dbbd72e5259f1e18c21d8f2781291a162d29

--- a/recipes-products/images/apq8053/apq8053-fsconfig.conf
+++ b/recipes-products/images/apq8053/apq8053-fsconfig.conf
@@ -11,6 +11,7 @@ usr/bin/ipmon 1000 0 0744 capabilities=0x3000
 build.prop 5002 5002 644
 usr/bin/qmmf-webserver 5001 5001 0744 capabilities=0x3C02
 usr/bin/ipc-webserver 5001 5001 0744 capabilities=0x3C02
+sbin/halt.sysvinit 0 1301 4754
 data 0 1000 0775
 etc/passwd 0 0 0644
 system 1000 1000 775
