--- a/conf/machine/apq8009.conf
+++ b/conf/machine/apq8009.conf
@@ -16,7 +16,7 @@ KERNEL_PERF_DEFCONFIG = "msm8909-perf_defconfig"
 KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci mem=512M"
 
 DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
 
 # Use systemd init manager.
 DISTRO_FEATURES_append = " systemd"
