Use HASROS to replace VARIANT in enable ROS in apq8009-robot and apq8096-drones separately

--- a/conf/machine/apq8096.conf
+++ b/conf/machine/apq8096.conf
@@ -28,7 +28,7 @@ DISTRO_FEATURES_append = " face-recognition"
 DISTRO_FEATURES_remove = "sysvinit"
 
 # ROS
-DISTRO_FEATURES_append = " ${VARIANT}"
+DISTRO_FEATURES_append = " ${@base_contains('HASROS', 'TRUE', 'ROS', '', d)}"
 DISTRO_FEATURES_append = " ROS-32"
 
 # Use systemd init manager.
