--- a/conf/machine/apq8009-robot.conf
+++ b/conf/machine/apq8009-robot.conf
@@ -24,7 +24,7 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_remove = "sysvinit"
 
 # ROS
-DISTRO_FEATURES_append = " ${VARIANT}"
+DISTRO_FEATURES_append = " ${@base_contains('HASROS', 'TRUE', 'ROS', '', d)}"
 
 # Change Image features for systemd.
 IMAGE_DEV_MANAGER = "udev"
@@ -47,7 +47,7 @@ MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 4096 -F -v"
 #PERSIST UBI Args
 MKUBIFS_PERSIST_ARGS ?= "-m 2048 -e 126976 -c 4096 -j 2MiB -F -v"
 
-SYSTEM_VOLUME_SIZE ?= "${@base_contains('VARIANT', 'ROS', '400MiB', '200MiB', d)}"
+SYSTEM_VOLUME_SIZE ?= "${@base_contains('HASROS', 'TRUE', '400MiB', '200MiB', d)}"
 CACHE_VOLUME_SIZE ?= "37MiB"
 PERSIST_VOLUME_SIZE ?= "4MiB"
 PAGE_SIZE = '2048'
