--- a/conf/machine/apq8009.conf
+++ b/conf/machine/apq8009.conf
@@ -30,3 +30,11 @@ DISTRO_FEATURES_remove = "sysvinit"
 IMAGE_DEV_MANAGER = "udev"
 IMAGE_INIT_MANAGER = "systemd"
 IMAGE_INITSCRIPTS = ""
+
+PREFERRED_VERSION_gstreamer1.0="1.12.2"
+PREFERRED_VERSION_gstreamer1.0-plugins-base="1.12.2"
+PREFERRED_VERSION_gstreamer1.0-plugins-good="1.12.2"
+PREFERRED_VERSION_gstreamer1.0-plugins-bad="1.12.2"
+PREFERRED_VERSION_gstreamer1.0-libav="1.12.2"
+PREFERRED_VERSION_gstreamer1.0-omx="1.12.2"
+PREFERRED_VERSION_gstreamer1.0-rtsp-server="1.12.2"
