Add gps user and auto relaunch loc_launcher.
Add loc_launcher in /etc/inittab to automatically
relaunch the service at device boot up. Also add a
gps and locationclient user/group id to run location
services under this uid/gid. The uid will be available
in /etc/passwd and group in /etc/group.

Change-Id: I671f8bd6a49952449203c2d1198d781fed3113a4
CRs-Fixed: 2183809

--- a/conf/distro/mdm-perf.conf
+++ b/conf/distro/mdm-perf.conf
@@ -3,6 +3,7 @@
 #@NAME: MDM-PERF
 #@DESCRIPTION: QTI Linux Distribution for MDM targets with performance orientation (glibc based)
 ################################################################################################
+INHERIT += "extrausers"
 
 require conf/distro/include/msm.inc
 
