--- a/conf/machine/apq8053.conf
+++ b/conf/machine/apq8053.conf
@@ -29,8 +29,8 @@ DEFAULT_ENFORCING = "enforcing"
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
-# Disable journalling for RO rootfs. Set the block size to 1024.
-IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
+# Disable journalling for RO rootfs.
+IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
 
 # location packages
 DISTRO_FEATURES_append = " location-services"
@@ -41,6 +41,9 @@ DISTRO_FEATURES_append = " le-clang"
 
 # Add all QTI audio extension to the machine.
 DISTRO_FEATURES_append = " qti-audio-extensions"
+
+#Enable block device authentication using device-mapper-verity
+DISTRO_FEATURES_append = " dm-verity"
 
 # Multilib configuration
 # This sets any packages preprended with lib32- to be built with
