--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -27,4 +27,7 @@ DISTRO_FEATURES_append = " ro-rootfs"
 DISTRO_FEATURES_append = " face-recognition"
 
 # Disable journalling for RO rootfs. Set the block size to 1024.
-IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
+IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
+
+#Enable block device authentication using device-mapper-verity
+DISTRO_FEATURES_append = " dm-verity"
