meta-qti-bsp: apq8053: Switch to systemd
Switch to systemd and create firmware folder to mount
NHLOS firmware in base-files recipe.

Change-Id: Idbfb217f776f5a96889bbe56239b2242b05887c2

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -26,5 +26,16 @@ DISTRO_FEATURES_append = " ro-rootfs"
 # face recognition
 DISTRO_FEATURES_append = " face-recognition"
 
+DISTRO_FEATURES_remove = "sysvinit"
+# Use systemd init manager.
+DISTRO_FEATURES_append = " systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+VIRTUAL-RUNTIME_dev_manager = "udev"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+# Change Image features for systemd.
+IMAGE_DEV_MANAGER = "udev"
+IMAGE_INIT_MANAGER = "systemd"
+IMAGE_INITSCRIPTS = ""
+
 # Disable journalling for RO rootfs. Set the block size to 1024.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
