--- a/conf/machine/apq8053-64.conf
+++ b/conf/machine/apq8053-64.conf
@@ -37,6 +37,17 @@ DISTRO_FEATURES_append = " le-clang"
 # Add all QTI audio extension to the machine.
 DISTRO_FEATURES_append = " qti-audio-extensions"
 
+DISTRO_FEATURES_remove = "sysvinit"
+# Use systemd init manager.
+DISTRO_FEATURES_append = " systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+VIRTUAL-RUNTIME_dev_manager = "udev"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+# Change Image features for systemd.
+IMAGE_DEV_MANAGER = "udev"
+IMAGE_INIT_MANAGER = "systemd"
+IMAGE_INITSCRIPTS = ""
+
 # Multilib configuration
 # This sets any packages preprended with lib32- to be built with
 # the armv7a tuning (32 bit) instead of 64 bit aarch.
