Enabling selinux in enforcing mode for apq8053-32.
Change-Id: I543e0106e242fc8744c97d9c033c2b52bcd678b7

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -20,6 +20,12 @@ KERNEL_PERF_IMAGETYPE = "zImage-dtb"
 KERNEL_PERF_DEFCONFIG = "apq8053_IoE-perf_defconfig"
 KERNEL_PERF_CMD_PARAMS = "noinitrd ro androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
 
+BBMASK .= "${@[ '', '|.*/*/recipes-security/libselinux/'][d.getVar('VARIANT', True) != ('minimal')]}"
+
+PREFERRED_VERSION_refpolicy-standard = "${@[ '', '2.20141203'][d.getVar('VARIANT', True) != ('minimal')]}"
+DEFAULT_ENFORCING = "${@[ '', 'enforcing'][d.getVar('VARIANT', True) != ('minimal')]}"
+DISTRO_FEATURES_append = "${@['', ' selinux location-services le-clang qti-audio-extensions'][d.getVar('VARIANT', True) != ('minimal')]}"
+
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
