Setting adreno as a preferred provider for libgles1/2 and egl
Also added zip as host tools.

Change-Id: Ic2d25c0fabc039edd3585070c5380859d1831d01

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,4 +5,4 @@ BBFILE_PRIORITY_msm = "10"
 BBFILE_PATTERN_msm := "^${LAYERDIR}/"
 
 # Tools needed on the build host for usage within build tasks by recipes of this layer.
-HOSTTOOLS_NONFATAL += "xgettext msgmerge msgfmt gmsgfmt java"
+HOSTTOOLS_NONFATAL += "xgettext msgmerge msgfmt gmsgfmt java zip"
