--- a/conf/machine/apq8098.conf
+++ b/conf/machine/apq8098.conf
@@ -6,6 +6,10 @@ require conf/machine/include/apq8098.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-msm-4.4"
 
+PREFERRED_PROVIDER_virtual/libgles1  = "adreno"
+PREFERRED_PROVIDER_virtual/libgles2  = "adreno"
+PREFERRED_PROVIDER_virtual/egl = "adreno"
+
 KERNEL_IMAGETYPE = "Image.gz-dtb"
 KERNEL_DTS_NAME = "msmcobalt"
 KERNEL_BASE = "0x80000000"
