meta-qti-bsp: Add new chrony source based on SOCK for mdm9650
Add new chrony time source based on SOCK which is obtained
from kinematics GNSS position fix. The PPS refclock is locked
to thie new source.

Change-Id: If878d3aa95b8d93a723084a576a5a436397be40d

--- a/recipes-connectivity/chrony/chrony/mdm9650/chrony.conf
+++ b/recipes-connectivity/chrony/chrony/mdm9650/chrony.conf
@@ -1,5 +1,11 @@
+# Use a local timeserver
+server 192.168.100.2 noselect
+
 # Sync the start of the second based on the 1PPS signal
-refclock PPS /dev/pps0 refid KPPS trust
+refclock PPS /dev/pps0 refid KPPS trust lock GNSS
+
+# GNSS time
+refclock SOCK /var/run/chrony.sock refid GNSS noselect
 
 # Step the system clock instead of slew if the adjustment
 # is larger than 0.1 second.
