--- a/conf/distro/msm.conf
+++ b/conf/distro/msm.conf
@@ -21,6 +21,6 @@ DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ${DI
 DISTRO_FEATURES += "emmc-boot"
 
 # Retain existing directory structure for base product image.
-# Append variants like '-perf', '-user', 'perf-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}${@['-' + d.getVar('VARIANT', True), ''][d.getVar('VARIANT', True) == ('')]}"
+# Append variants like '-perf', '-user', '-minimal' etc to deploy dir.
+DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}${@['', '-minimal'][d.getVar('VARIANT', True) == ('minimal')]}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
