--- a/conf/distro/mdm.conf
+++ b/conf/distro/mdm.conf
@@ -24,6 +24,6 @@ DISTRO_FEATURES += "nand-boot"
 DISTRO_FEATURES += "ro-rootfs"
 
 # Retain existing directory structure for base product image.
-# Append variants like '-perf', '-user', 'perf-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}${@['-' + d.getVar('VARIANT', True), ''][d.getVar('VARIANT', True) == ('')]}"
+# Append variants like '-perf', '-user', '-minimal' etc to deploy dir.
+DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}${@['', '-minimal'][d.getVar('VARIANT', True) == ('minimal')]}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
