apq8053-fsconfig: set mode for abctl
Change-Id: I8d70f6cc8b1f1fbf976d62e699b4cb46df8701cd

--- a/recipes-products/images/apq8053/apq8053-fsconfig.conf
+++ b/recipes-products/images/apq8053/apq8053-fsconfig.conf
@@ -40,3 +40,4 @@ system/etc/qmmf/yuv_cac_calib_nv21.json 5000 1000 444
 sbin/rmt_storage 65534 1000 0754 capabilities=0x3C00
 sbin/getslotsuffix 0 1000 0754
 etc/recovery-updater.sh 1000 0 0744
+sbin/abctl 0 0 0744
