Rename apq8053 machine as apq8053-64
Rename apq8053 machine as apq8053-64 and remove unused machine confs

Change-Id: I67ebd2b1591d7e8eae3c39adaa6c264f8375d70d

--- a/conf/machine/apq8053-64.conf
+++ b/conf/machine/apq8053-64.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: APQ8053
-#@DESCRIPTION: Machine configuration for QTI MTP with APQ8053
+#@NAME: APQ8053-64
+#@DESCRIPTION: Machine configuration for QTI MTP with APQ8053-64
 
 require conf/machine/include/apq8053.inc
 
