Remove references for minimal variant
Minimal variant is deprecated now. Only 'debug', 'perf' and 'user'
variants are going to be supported so removing all references.

Change-Id: I1a1738d3fbbc53bda9916f5019897d21a71295a4

--- a/conf/distro/msm-perf.conf
+++ b/conf/distro/msm-perf.conf
@@ -24,6 +24,6 @@ DISTRO_FEATURES += "emmc-boot"
 PERF_BUILD = "1"
 
 # Retain existing directory structure for base product image.
-# Append variants like '-perf', '-user', '-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}-perf${@['', '-minimal'][d.getVar('VARIANT', True) == ('minimal')]}"
+# Append variants like '-perf', '-user'to deploy dir.
+DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}-perf"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
