--- a/conf/distro/msm-user.conf
+++ b/conf/distro/msm-user.conf
@@ -28,8 +28,8 @@ USER_BUILD = "1"
 
 
 # Retain existing directory structure for base product image.
-# Append variants like '-perf', '-user', 'perf-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}-user${@['', '-minimal'][d.getVar('VARIANT', True) == ('minimal')]}"
+# Append variants like '-perf', '-user' etc to deploy dir.
+DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}-user"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
 
 EXTRA_USERS_PARAMS_append = "\
