--- a/conf/distro/mdm-perf.conf
+++ b/conf/distro/mdm-perf.conf
@@ -25,5 +25,5 @@ PERF_BUILD = "1"
 
 # Retain existing directory structure for base product image.
 # Append variants like '-perf', '-user', '-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}-perf${@['', '-minimal'][d.getVar('VARIANT', True) == ('minimal')]}"
+DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}-perf"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
