--- a/conf/distro/msm.conf
+++ b/conf/distro/msm.conf
@@ -22,5 +22,5 @@ DISTRO_FEATURES += "emmc-boot"
 
 # Retain existing directory structure for base product image.
 # Append variants like '-perf', '-user', '-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}${@['', '-minimal'][d.getVar('VARIANT', True) == ('minimal')]}"
+DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}"
 DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
