Enable sdllvm support for apq8053-32.
Change-Id: I84f21808cadfd78478aa65eb6331812ed8823720

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -28,6 +28,7 @@ DISTRO_FEATURES_append = "${@['', ' selinux location-services le-clang qti-audio
 
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
+DISTRO_FEATURES_append = " le-clang"
 
 # face recognition
 DISTRO_FEATURES_append = " face-recognition"
