--- a/conf/machine/apq8053-64.conf
+++ b/conf/machine/apq8053-64.conf
@@ -11,7 +11,7 @@ KERNEL_DTS_NAME = "msm8953"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x81900000"
 KERNEL_DEFCONFIG = "msm8953_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
 
 # Perf kernel configs
 KERNEL_PERF_IMAGETYPE = "Image-dtb"
