meta-qti-bsp: apq8053: Change kernel perf defconfig
Use msm8953-perf_defconfig to make perf builds for apq8053.

Change-Id: I94870dcf5c8cd04bc3a203f772e18dbf4baa74d4

--- a/conf/machine/apq8053-64.conf
+++ b/conf/machine/apq8053-64.conf
@@ -15,7 +15,7 @@ KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=
 
 # Perf kernel configs
 KERNEL_PERF_IMAGETYPE = "Image-dtb"
-KERNEL_PERF_DEFCONFIG = "msm8953_defconfig"
+KERNEL_PERF_DEFCONFIG = "msm8953-perf_defconfig"
 KERNEL_PERF_CMD_PARAMS = "noinitrd ro androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
 
 # selinux
