--- a/conf/machine/mdm9650.conf
+++ b/conf/machine/mdm9650.conf
@@ -4,7 +4,7 @@
 
 require conf/machine/include/mdm9650.inc
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-quic"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-msm-4.9"
 
 KERNEL_IMAGETYPE = "zImage"
 KERNEL_DTS_NAME = "mdm9650"
@@ -12,7 +12,7 @@ KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x82000000"
 KERNEL_DEFCONFIG = "mdm_defconfig"
 KERNEL_PERF_DEFCONFIG = "mdm-perf_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_hsl_uart,0x78b1000"
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_serial_dm,0x78b1000"
 
 #GCCVERSION = "5.2%"
 #Enable Recovery image generation
