Add product specific distributions
Create separate DISTRO files for each product and support OVERRIDES
to make product specific customizations in recipes.

Change-Id: I40ccd2b9afd76fb1ea0b448ebb0779b413945eca

--- a/conf/distro/mdm.conf
+++ b/conf/distro/mdm.conf
@@ -3,8 +3,7 @@
 #@NAME: MDM
 #@DESCRIPTION: QTI Linux Distribution for MDM targets (glibc based)
 #############################################################################
-INHERIT += "extrausers"
-require conf/distro/include/msm.inc
+require conf/distro/include/base.inc
 
 # DISTRO CONFIGURATION
 DISTRO_NAME = "mdm"
@@ -12,7 +11,7 @@ DISTRO_VERSION = "${BUILDNAME}"
 VIRTUAL-RUNTIME_dev_manager ?= "busybox-mdev"
 
 # Add distro overrides
-DISTROOVERRIDES = "mdm"
+DISTROOVERRIDES =. "mdm:"
 
 # Basic distribution features
 DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ld-is-gold ${DISTRO_FEATURES_LIBC}"
@@ -23,7 +22,5 @@ DISTRO_FEATURES += "nand-boot"
 #Enable for Read only system
 #DISTRO_FEATURES += "ro-rootfs"
 
-# Retain existing directory structure for base product image.
-# Append variants like '-perf', '-user' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}"
-DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
+# Enable performance features
+PERF_BUILD = "${@['0', '1'][d.getVar('VARIANT', True) != ('' or 'debug')]}"
