--- a/conf/distro/msm.conf
+++ b/conf/distro/msm.conf
@@ -3,16 +3,15 @@
 #@NAME: MSM
 #@DESCRIPTION: MSM Linux Distribution (glibc based)
 #############################################################################
-INHERIT += "extrausers"
-require conf/distro/include/msm.inc
+require conf/distro/include/base.inc
 
 # DISTRO CONFIGURATION
-DISTRO_NAME = "msm"
-DISTRO_VERSION = "${BUILDNAME}"
+DISTRO_NAME ?= "msm"
+DISTRO_VERSION ?= "${BUILDNAME}"
 VIRTUAL-RUNTIME_dev_manager ?= "busybox-mdev"
 
 # Add distro overrides
-DISTROOVERRIDES = "msm"
+DISTROOVERRIDES =. "msm:"
 
 # Basic distribution features
 DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ${DISTRO_FEATURES_LIBC}"
@@ -20,7 +19,8 @@ DISTRO_FEATURES += "sysvinit eabi ipv6 ipv4 largefile thumb-interwork xattr ${DI
 # MSMs are emmc based targets
 DISTRO_FEATURES += "emmc-boot"
 
-# Retain existing directory structure for base product image.
-# Append variants like '-perf', '-user', '-minimal' etc to deploy dir.
-DEPLOY_NAME ?= "${MACHINE}${@['-' + d.getVar('PRODUCT', True), ''][d.getVar('PRODUCT', True) == ('' or 'base')]}"
-DEPLOY_DIR_IMAGE = "${DEPLOY_DIR}/images/${DEPLOY_NAME}"
+# Enable performance features
+PERF_BUILD = "${@['0', '1'][d.getVar('VARIANT', True) != ('' or 'debug')]}"
+
+# Build optimization to disable debugging features, mainly for production images.
+USER_BUILD = "${@['0', '1'][d.getVar('VARIANT', True) == 'user']}"
