--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -7,6 +7,7 @@ require conf/machine/include/apq8053.inc
 DEFAULTTUNE = "armv7a-neon"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-msm-4.9"
+PREFERRED_PROVIDER_virtual/bootloader = "lk"
 
 KERNEL_IMAGETYPE = "zImage-dtb"
 KERNEL_DTS_NAME = "msm8953"
