Disable dm-verity for apq8053
Temporarily disable dm-verity for apq8053 till correct system
partition size is identified.

Change-Id: I40b26eb63c597e0bda77a99610cecd4ee4f85130

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -44,8 +44,5 @@ IMAGE_DEV_MANAGER = "udev"
 IMAGE_INIT_MANAGER = "systemd"
 IMAGE_INITSCRIPTS = ""
 
-# Disable journalling for RO rootfs. Set the block size to 1024.
+# Disable journalling for RO rootfs.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
-
-#Enable block device authentication using device-mapper-verity
-DISTRO_FEATURES_append = " dm-verity"
