--- a/conf/machine/mdm9607.conf
+++ b/conf/machine/mdm9607.conf
@@ -10,7 +10,7 @@ KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x81E00000"
 KERNEL_DEFCONFIG = "${@bb.utils.contains('PRODUCT', 'psm', 'mdm9607-128mb-perf_defconfig', 'mdm9607_defconfig', d)}"
 KERNEL_PERF_DEFCONFIG = "mdm9607-perf_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_hsl_uart,0x78b3000"
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_serial_dm,0x78b3000"
 
 #Enable Recovery image generation
 RECOVERY_IMAGE = "1"
