--- a/conf/machine/qcs405-64.conf
+++ b/conf/machine/qcs405-64.conf
@@ -16,25 +16,10 @@ CACHE_SIZE_EXT4 ?= "80000000"
 IMAGE_FSTYPES += "ext4"
 RECOVERY_IMAGE = "1"
 
-# Use systemd init manager.
-DISTRO_FEATURES_remove = "sysvinit"
-DISTRO_FEATURES_append = " systemd"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
-VIRTUAL-RUNTIME_dev_manager = "udev"
-VIRTUAL-RUNTIME_init_manager = "systemd"
-
-# Change Image features for systemd.
-IMAGE_DEV_MANAGER = "udev"
-IMAGE_INIT_MANAGER = "systemd"
-IMAGE_INITSCRIPTS = ""
-
 KERNEL_IMAGETYPE = "Image.gz-dtb"
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
-#  TODO: ADD qcs405 entries, once kernel is ready.
-KERNEL_DTS_NAME = "qcs605"
-KERNEL_BASE = "0x80000000"
-KERNEL_TAGS_OFFSET = "0x81900000"
-KERNEL_DEFCONFIG = "sdm670_defconfig"
-KERNEL_CMD_PARAMS = "console=ttyMSM0,115200n8 earlycon=msm_geni_serial,0xA84000 androidboot.hardware=qcom androidboot.console=ttyMSM0 video=vfb:640x400,bpp=32,memsize=3072000 msm_rtb.filter=0x237 ehci-hcd.park=3 lpm_levels.sleep_disabled=1 service_locator.enable=1 androidboot.selinux=permissive"
+require conf/multilib.conf
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
 
