Replace obsolete base_contains function with bb.utils.contains
base_contains conditional check function is obsolete in Rocko.
Use bb.utils.contains in its place.

Change-Id: I7a9823ebb72d09d126484453d856d5abe00a62f6

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -39,4 +39,4 @@ IMAGE_INIT_MANAGER = "systemd"
 IMAGE_INITSCRIPTS = ""
 
 # Disable journalling for RO rootfs.
-IMAGE_EXT4_EXTRA_OPTIONS = "${@base_contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
+IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
