--- a/conf/machine/apq8096.conf
+++ b/conf/machine/apq8096.conf
@@ -24,7 +24,7 @@ DISTRO_FEATURES_append = " face-recognition"
 DISTRO_FEATURES_remove = "sysvinit"
 
 # ROS
-DISTRO_FEATURES_append = " ${@base_contains('HASROS', 'TRUE', 'ROS', '', d)}"
+DISTRO_FEATURES_append = " ${@bb.utils.contains('HASROS', 'TRUE', 'ROS', '', d)}"
 DISTRO_FEATURES_append = " ROS-32"
 
 # Use systemd init manager.
