Update batcam kernel cmdline for hibernation support
Change-Id: I9fb8d7c511516e64d974a8a2e92d5450bd7e32e8

--- a/conf/distro/batcam.conf
+++ b/conf/distro/batcam.conf
@@ -6,3 +6,6 @@ DISTRO_NAME = "batcam"
 DISTROOVERRIDES =. "batcam:"
 
 PRODUCT = "batcam"
+
+# Hibernation Support
+KERNEL_CMD_PARAMS_append = " resume=/dev/mmcblk0p25 resumewait no_console_suspend=1 "
