--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -24,7 +24,7 @@ KERNEL_PERF_CMD_PARAMS = "noinitrd ro androidboot.hardware=qcom ehci-hcd.park=3 
 DISTRO_FEATURES_append = " ro-rootfs"
 #enable selinux feature
 DISTRO_FEATURES_append = " selinux"
-DEFAULT_ENFORCING = "permissive"
+DEFAULT_ENFORCING = "enforcing"
 
 # Use systemd init manager.
 DISTRO_FEATURES_remove = "sysvinit"
