Restructure kernel config variables.
Reorganize kernel config variables settings to allow
easy override when needed.

Change-Id: I96b14f3d29b43bee065f894aeecef2f4a65b45f4

--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -8,7 +8,8 @@ KERNEL_IMAGETYPE = "zImage-dtb"
 KERNEL_DTS_NAME = "sdxpoorwills"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x82000000"
-KERNEL_DEFCONFIG = "sdxpoorwills_defconfig"
-KERNEL_PERF_DEFCONFIG = "sdxpoorwills-perf_defconfig"
+
+KERNEL_CONFIG = "${@['sdxpoorwills-perf_defconfig', 'sdxpoorwills_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
 KERNEL_CMD_PARAMS = "noinitrd rw rootwait console=ttyMSM0,115200,n8 no_console_suspend=1 androidboot.hardware=qcom androidboot.console=ttyMSM0 lpm_levels.sleep_disabled=1"
+KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8 androidboot.console=ttyMSM0', '', d)}"
