--- a/conf/machine/apq8009.conf
+++ b/conf/machine/apq8009.conf
@@ -4,25 +4,31 @@
 
 require conf/machine/include/apq8009.inc
 
-KERNEL_IMAGETYPE = "zImage-dtb"
+PREFERRED_PROVIDER_virtual/bootloader = "lk"
 
+KERNEL_IMAGETYPE = "zImage-dtb"
 KERNEL_DTS_NAME = "msm8909"
 KERNEL_BASE = "0x81C00000"
 KERNEL_TAGS_OFFSET = "0x81900000"
-KERNEL_DEFCONFIG = "msm8909_defconfig"
-KERNEL_PERF_DEFCONFIG = "msm8909-perf_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci mem=512M"
 
+KERNEL_CONFIG = "${@['msm8909-perf_defconfig', 'msm8909_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyHSL0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci mem=512M"
+KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyHSL0,115200,n8', '', d)}"
+
+# readonly-rootfs
+DISTRO_FEATURES_append = " ro-rootfs"
+
+#enable selinux
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
 # Use systemd init manager.
+DISTRO_FEATURES_remove = "sysvinit"
 DISTRO_FEATURES_append = " systemd"
-DISTRO_FEATURES_append += "ro-rootfs"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_dev_manager = "udev"
 VIRTUAL-RUNTIME_init_manager = "systemd"
-DISTRO_FEATURES_remove = "sysvinit"
 
 # Change Image features for systemd.
 IMAGE_DEV_MANAGER = "udev"
