--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -12,17 +12,16 @@ KERNEL_IMAGETYPE = "zImage-dtb"
 KERNEL_DTS_NAME = "msm8953"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x81900000"
-KERNEL_DEFCONFIG = "msm8953_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
 
-# Perf kernel configs
-KERNEL_PERF_IMAGETYPE = "zImage-dtb"
-KERNEL_PERF_DEFCONFIG = "msm8953-perf_defconfig"
-KERNEL_PERF_CMD_PARAMS = "noinitrd ro androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
+KERNEL_CONFIG = "${@['msm8953-perf_defconfig', 'msm8953_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
+KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8', '', d)}"
 
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
-#enable selinux feature
+
+#enable selinux
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "enforcing"
 
@@ -32,6 +31,7 @@ DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_dev_manager = "udev"
 VIRTUAL-RUNTIME_init_manager = "systemd"
+
 # Change Image features for systemd.
 IMAGE_DEV_MANAGER = "udev"
 IMAGE_INIT_MANAGER = "systemd"
