--- a/conf/machine/apq8053-64.conf
+++ b/conf/machine/apq8053-64.conf
@@ -4,23 +4,24 @@
 
 require conf/machine/include/apq8053.inc
 
-KERNEL_IMAGETYPE = "Image.gz-dtb"
+PREFERRED_PROVIDER_virtual/bootloader = "lk"
+
+KERNEL_IMAGETYPE = "${@['Image-dtb', 'Image.gz-dtb'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 KERNEL_DTS_NAME = "msm8953"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x81900000"
-KERNEL_DEFCONFIG = "msm8953_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
 
-# Perf kernel configs
-KERNEL_PERF_IMAGETYPE = "Image-dtb"
-KERNEL_PERF_DEFCONFIG = "msm8953-perf_defconfig"
-KERNEL_PERF_CMD_PARAMS = "noinitrd ro androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
+KERNEL_CONFIG = "${@['msm8953-perf_defconfig', 'msm8953_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci"
+KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8', '', d)}"
 
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
-# Disable journalling for RO rootfs.
-IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
+#enable selinux
+DISTRO_FEATURES_append = " selinux"
+DEFAULT_ENFORCING = "permissive"
 
 # Use systemd init manager.
 DISTRO_FEATURES_remove = "sysvinit"
@@ -28,10 +29,14 @@ DISTRO_FEATURES_append = " systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_dev_manager = "udev"
 VIRTUAL-RUNTIME_init_manager = "systemd"
+
 # Change Image features for systemd.
 IMAGE_DEV_MANAGER = "udev"
 IMAGE_INIT_MANAGER = "systemd"
 IMAGE_INITSCRIPTS = ""
+
+# Disable journalling for RO rootfs.
+IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 4096 ','',d)}"
 
 # Multilib configuration
 # This sets any packages preprended with lib32- to be built with
