--- a/conf/machine/mdm9650.conf
+++ b/conf/machine/mdm9650.conf
@@ -8,10 +8,11 @@ KERNEL_IMAGETYPE = "zImage"
 KERNEL_DTS_NAME = "mdm9650"
 KERNEL_BASE = "0x80000000"
 KERNEL_TAGS_OFFSET = "0x82000000"
-KERNEL_DEFCONFIG = "mdm_defconfig"
-KERNEL_PERF_DEFCONFIG = "mdm-perf_defconfig"
-KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_serial_dm,0x78b1000"
 
-#GCCVERSION = "5.2%"
+KERNEL_CONFIG = "${@['mdm-perf_defconfig', 'mdm_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 earlycon=msm_serial_dm,0x78b1000"
+KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8', '', d)}"
+
 #Enable Recovery image generation
 RECOVERY_IMAGE = "1"
