--- a/conf/distro/batcam.conf
+++ b/conf/distro/batcam.conf
@@ -7,5 +7,7 @@ DISTROOVERRIDES =. "batcam:"
 
 PRODUCT = "batcam"
 
+KERNEL_CONFIG = "${@['msm8953-batcam-perf_defconfig', 'msm8953-batcam_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
+
 # Hibernation Support
 KERNEL_CMD_PARAMS_append = " resume=/dev/mmcblk0p25 resumewait no_console_suspend=1 "
