--- a/conf/distro/batcam.conf
+++ b/conf/distro/batcam.conf
@@ -7,6 +7,8 @@ DISTROOVERRIDES =. "batcam:"
 
 PRODUCT = "batcam"
 
+KERNEL_IMAGETYPE = "Image-dtb"
+
 KERNEL_CONFIG = "${@['msm8953-batcam-perf_defconfig', 'msm8953-batcam_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
 # Hibernation Support
