Enable audio-dlkm DISTRO_FEATURE for apq8053
Change-Id: I084f63ec5676f0e19e024cf3346f727b29e6e897

--- a/conf/machine/apq8053-32.conf
+++ b/conf/machine/apq8053-32.conf
@@ -21,6 +21,9 @@ KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'co
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
 
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
 #enable selinux
 DISTRO_FEATURES_append = " selinux"
 DEFAULT_ENFORCING = "enforcing"
