Cleanup base-files recipe.
Install systemd mount services only when corresponding
partitions are available. Keep single fstab for both selinux
and non-selinux builds. Remove unused ro-fstab. Change restart
option for mount serivces to handle error conditions.

Change-Id: Ia48d6b6bc5e979576f251664e426739c3816a1ad

--- a/recipes-core/base-files/base-files-3.0.14/systemd/dsp-mount.service
+++ b/recipes-core/base-files/base-files-3.0.14/systemd/dsp-mount.service
@@ -31,7 +31,7 @@ SourcePath=/etc/initscripts/ab_mount.sh
 Before=local-fs.target
 
 [Service]
-Restart=no
+Restart=on-failure
 ExecStart=/etc/initscripts/ab_mount.sh "relatime,data=ordered,noauto_da_alloc,discard,ro,noexec,nodev,nosuid" ext4 /dev/disk/by-partlabel/dsp /dsp
 
 [Install]
