Enable ro-rootfs for mdm distro
Change-Id: I1ab48aa79d362e0e95c2fd29c467418a5e33f034

--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -11,5 +11,5 @@ KERNEL_TAGS_OFFSET = "0x82000000"
 
 KERNEL_CONFIG = "${@['sdxpoorwills-perf_defconfig', 'sdxpoorwills_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
-KERNEL_CMD_PARAMS = "noinitrd rw rootwait console=ttyMSM0,115200,n8 androidboot.hardware=qcom msm_rtb.filter=0x37 androidboot.console=ttyMSM0 lpm_levels.sleep_disabled=1  firmware_class.path=/lib/firmware/updates"
+KERNEL_CMD_PARAMS = "noinitrd ro rootwait console=ttyMSM0,115200,n8 androidboot.hardware=qcom msm_rtb.filter=0x37 androidboot.console=ttyMSM0 lpm_levels.sleep_disabled=1  firmware_class.path=/lib/firmware/updates"
 KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8 androidboot.console=ttyMSM0', '', d)}"
