meta-qti-bsp:Renaming conf files for qcs40x.
-BASEMACHINE is changed from qcs405 to qcs40x
-som1-qcs405.conf to support qcs405,EMMC,kernel is 64 bit
 userspace will suport multilib.
-som2-qcs403.conf to support qcs403,NAND,kernel and
 userspace is 32 bit.
-Both the conf are using same qcs40x.inc.

Change-Id: Icd8ea39642fb8a501748cc131d859716119ffed9

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -1,9 +1,9 @@
 #@TYPE: Machine
-#@NAME: QCS405-64
-#@DESCRIPTION: Machine configuration for QTI QCS405-64
-require conf/machine/include/qcs405.inc
+#@NAME: SOM1-QCS405
+#@DESCRIPTION: Machine configuration for QTI SOM1-QCS405
+require conf/machine/include/qcs40x.inc
 # EMMC TARGET TO SUPPORT 64-bit kernel
-DISTRO ?= "msm"
+DISTRO = "qsap"
 DEFAULTTUNE = "aarch64"
 
 # Sizes for EXT4 (in bytes)
