--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -1,12 +1,13 @@
 #@TYPE: Machine
-#@NAME: QCS405-32
-#@DESCRIPTION: Machine configuration for QTI QCS405-32
-require conf/machine/include/qcs405.inc
+#@NAME: SOM2-QCS403
+#@DESCRIPTION: Machine configuration for QTI SOM2-QCS403
+require conf/machine/include/qcs40x.inc
 # NAND TARGET TO SUPPORT 32-bit kernel
-DISTRO ?= "msm"
+DISTRO = "qsap"
 DISTRO_FEATURES += "nand-boot"
 PAGE_SIZE ?= '4096'
-
+USR_IMAGE_BASENAME       = "${BASEMACHINE}-usrfs"
+OUTPUT_FILE_FINAL_UBI    = "${DEPLOY_DIR_IMAGE}/${BASEMACHINE}-sysfs.ubi"
 # Max supported inodes
 EXTRA_IMAGECMD ?= "-N 2048"
 #UBINIZE Args
