defconfig: msm8953-batcam: Add CONFIG_HIBERNATION_IMAGE_REUSE
Enable reusing the hibernation image.

Change-Id: If7470673eeb3d0de04dbde9819bc5f0650acea30

--- a/recipes-kernel/linux-msm/files/batcam/msm8953-batcam-perf_defconfig
+++ b/recipes-kernel/linux-msm/files/batcam/msm8953-batcam-perf_defconfig
@@ -64,6 +64,7 @@ CONFIG_NEON=y
 CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_HIBERNATION=y
+CONFIG_HIBERNATION_IMAGE_REUSE=y
 CONFIG_PM_STD_PARTITION="/dev/mmcblk0p49"
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
