--- a/recipes-kernel/linux-msm/files/batcam/msm8953-batcam_defconfig
+++ b/recipes-kernel/linux-msm/files/batcam/msm8953-batcam_defconfig
@@ -64,6 +64,7 @@ CONFIG_NEON=y
 CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_HIBERNATION=y
+CONFIG_HIBERNATION_IMAGE_REUSE=y
 CONFIG_PM_STD_PARTITION="/dev/mmcblk0p49"
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
