--- a/recipes-bsp/system-prop/files/persist-prop.service
+++ b/recipes-bsp/system-prop/files/persist-prop.service
@@ -1,11 +1,10 @@
 [Unit]
-SourcePath=/etc/initscripts/persist-prop
 Description=persist-prop service
 After=leprop.service
 Requires=leprop.service
 
 [Service]
-ExecStart=/etc/initscripts/persist-prop
+ExecStart=/usr/bin/setprop le.persistprop.enable true
 
 [Install]
 WantedBy=multi-user.target
