--- a/recipes-core/busybox/files/base.cfg
+++ b/recipes-core/busybox/files/base.cfg
@@ -74,7 +74,7 @@ CONFIG_FEATURE_DIFF_LONG_OPTIONS=y
 CONFIG_FEATURE_EDITING_HISTORY=255
 CONFIG_FEATURE_EJECT_SCSI=y
 CONFIG_FEATURE_EXPAND_LONG_OPTIONS=y
-CONFIG_FEATURE_EXTRA_QUIET=y
+# CONFIG_FEATURE_EXTRA_QUIET is not set
 CONFIG_FEATURE_FANCY_HEAD=y
 CONFIG_FEATURE_FDISK_ADVANCED=y
 CONFIG_FEATURE_FIND_DELETE=y
@@ -116,10 +116,10 @@ CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_DAYTIME=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_DISCARD=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_ECHO=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_TIME=y
-CONFIG_FEATURE_INITRD=y
-CONFIG_FEATURE_INIT_COREDUMPS=y
-CONFIG_FEATURE_INIT_SCTTY=y
-CONFIG_FEATURE_INIT_SYSLOG=y
+# CONFIG_FEATURE_INITRD is not set
+# CONFIG_FEATURE_INIT_COREDUMPS is not set
+# CONFIG_FEATURE_INIT_SCTTY is not set
+# CONFIG_FEATURE_INIT_SYSLOG is not set
 CONFIG_FEATURE_INSTALLER=y
 CONFIG_FEATURE_INSTALL_LONG_OPTIONS=y
 CONFIG_FEATURE_IPCALC_FANCY=y
@@ -256,8 +256,8 @@ CONFIG_IFENSLAVE=y
 CONFIG_IFPLUGD=y
 CONFIG_INCLUDE_SUSv2=y
 CONFIG_INETD=y
-CONFIG_INIT=y
-CONFIG_INIT_TERMINAL_TYPE="linux"
+# CONFIG_INIT is not set
+CONFIG_INIT_TERMINAL_TYPE=""
 CONFIG_INSTALL=y
 CONFIG_IONICE=y
 CONFIG_IOSTAT=y
