Add slot-suffix service to set slotsuffix in A/B boot
Add slot-suffix service to set slotsuffix in A/B boot and install
as part of systemd-machine-units.

Change-Id: Ida831276c718b6fb611aa74de0898e39e15782c3

--- a/recipes-core/base-files/base-files-3.0.14/systemd/bluetooth-mount.service
+++ b/recipes-core/base-files/base-files-3.0.14/systemd/bluetooth-mount.service
@@ -27,11 +27,12 @@
 
 [Unit]
 Description=Mount bluetooth partition to /bt_firmware mount point
-SourcePath=/etc/initscripts/ab_mount.sh
 
 [Service]
-Restart=on-failure
-ExecStart=/etc/initscripts/ab_mount.sh "noexec,nodev,ro,context=system_u:object_r:firmware_t:s0" vfat /dev/disk/by-partlabel/bluetooth /bt_firmware
+Type=oneshot
+RemainAfterExit=yes
+PassEnvironment="SLOT_SUFFIX"
+ExecStart=/bin/mount -o noexec,nodev,ro,context=system_u:object_r:firmware_t:s0 -t vfat /dev/disk/by-partlabel/bluetooth${SLOT_SUFFIX} /bt_firmware
 
 [Install]
 WantedBy=local-fs.target
