--- a/recipes-core/base-files/base-files-3.0.14/systemd/dsp-mount.service
+++ b/recipes-core/base-files/base-files-3.0.14/systemd/dsp-mount.service
@@ -27,11 +27,12 @@
 
 [Unit]
 Description=Mount dsp partition to /dsp mount point
-SourcePath=/etc/initscripts/ab_mount.sh
 
 [Service]
-Restart=on-failure
-ExecStart=/etc/initscripts/ab_mount.sh "relatime,data=ordered,noauto_da_alloc,discard,ro,noexec,nodev,nosuid" ext4 /dev/disk/by-partlabel/dsp /dsp
+Type=oneshot
+RemainAfterExit=yes
+PassEnvironment="SLOT_SUFFIX"
+ExecStart=/bin/mount -o relatime,data=ordered,noauto_da_alloc,discard,ro,noexec,nodev,nosuid -t ext4 /dev/disk/by-partlabel/dsp${SLOT_SUFFIX} /dsp
 
 [Install]
 WantedBy=local-fs.target
