--- a/recipes-core/systemd/systemd-machine-units/set-slotsuffix.service
+++ b/recipes-core/systemd/systemd-machine-units/set-slotsuffix.service
@@ -1,4 +1,3 @@
-#!/bin/sh
 # Copyright (c) 2018, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -24,9 +23,15 @@
 # BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 # WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 # OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
-# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE
+# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-suffix=$(getslotsuffix)
-partition=$3${suffix}
+[Unit]
+Description= Set SLOT_SUFFIX in systemd environment
+DefaultDependencies=no
 
-mount -o $1 -t $2 $partition $4
+[Service]
+ExecStart=/bin/sh -c '/bin/systemctl set-environment SLOT_SUFFIX="$(getslotsuffix)"'
+RemainAfterExit=yes
+
+[Install]
+WantedBy=local-fs-pre.target
