apq8009: recoveryfs upgrade: Initial commit
This CL enables recovery-updater as a systemd
service to be run on bootup.

The change also borrows majority of design from:
I74d91cc8f4e63dfd423b1fab8ef7eda9feb3782b
I7c0ca262a1a00783364cc1de91bf1b0acca5c2cf
If556e0eed0ce85d40ef27976f29d1d575a0ca9c6

Change-Id: Ifa65fb6a8a047bdc12917d56645989aae9867582

--- a/recipes-bsp/startup-scripts/files/recovery_updater.service
+++ b/recipes-bsp/startup-scripts/files/recovery_updater.service
@@ -25,16 +25,19 @@
 # OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
+# The trigger-recovery-updater script should be triggered
+# only once cache partition has been mounted.
 
 [Unit]
-Description= Recovery-Updater Service
-SourcePath=/etc/initscripts/recovery-updater.sh
-DefaultDependencies=no
+Description= Recovery(fs) Updater Service
+SourcePath=/etc/initscripts/trigger-recovery-updater.sh
+After=cache.mount
 
 [Service]
-Restart=no
+Type=forking
+PIDFile=/var/run/recovery-updater.pid
 RemainAfterExit=yes
-ExecStart=/etc/initscripts/recovery-updater.sh start
+ExecStart=/etc/initscripts/trigger-recovery-updater.sh start
 
 [Install]
-WantedBy=sysinit.target
+WantedBy=multi-user.target
