defconfig: msm8953-batcam: Use uncompressed image
Using an uncompressed image reduces the total kernel boot time.

Change-Id: Idbd3dd0e9bb4aabca0fda61b0d885378cec78ff9

--- a/conf/distro/batcam.conf
+++ b/conf/distro/batcam.conf
@@ -11,3 +11,4 @@ KERNEL_CONFIG = "${@['msm8953-batcam-perf_defconfig', 'msm8953-batcam_defconfig'
 
 # Hibernation Support
 KERNEL_CMD_PARAMS_append = " resume=/dev/mmcblk0p49 resumewait no_console_suspend=1 "
+KERNEL_IMAGETYPE = "Image-dtb"
