--- a/recipes-kernel/linux-msm/files/batcam/msm8953-batcam-perf_defconfig
+++ b/recipes-kernel/linux-msm/files/batcam/msm8953-batcam-perf_defconfig
@@ -54,6 +54,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
+CONFIG_IMG_DTB=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
