defconfig: msm8953-batcam: Performance enhancements
Disable IPC_LOGGING/TRACING debug defconfigs.
Disable highmem since the target memory size is only 1Gb.
Disable block and loop devices as they had long init calls.

Change-Id: I57cdbdaf2f77bc37dcec5c298962b8acc09206f6

--- a/recipes-kernel/linux-msm/files/batcam/msm8953-batcam-perf_defconfig
+++ b/recipes-kernel/linux-msm/files/batcam/msm8953-batcam-perf_defconfig
@@ -43,11 +43,11 @@ CONFIG_ARCH_MSM8953=y
 # CONFIG_VDSO is not set
 CONFIG_SMP=y
 CONFIG_SCHED_MC=y
+CONFIG_VMSPLIT_3G_OPT=y
 CONFIG_NR_CPUS=8
 CONFIG_ARM_PSCI=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
-CONFIG_HIGHMEM=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_ZSMALLOC=y
@@ -75,9 +75,6 @@ CONFIG_NET=y
 CONFIG_UNIX=y
 CONFIG_INET=y
 CONFIG_DMA_CMA=y
-CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_QSEECOM=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
@@ -255,9 +252,10 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_INFO_DWARF4=y
 CONFIG_FRAME_WARN=2048
+CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_IPC_LOGGING=y
+CONFIG_STACKTRACE=y
 # CONFIG_FTRACE is not set
 CONFIG_SECURITY=y
 CONFIG_HARDENED_USERCOPY=y
