meta-qti-bsp: Enable audio-dlkm DISTRO_FEATURE for apq8009
Change-Id: Ia566ee8035f4649cad440c43746e62502758cc70
Signed-off-by: Sundara Vinayagam <sundvi@codeaurora.org>
Signed-off-by: Raja Mallik <rmallik@codeaurora.org>

--- a/conf/distro/robot-som.conf
+++ b/conf/distro/robot-som.conf
@@ -11,4 +11,7 @@ KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=
 
 PREFERRED_VERSION_linux-msm = "4.9"
 
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
 SERIAL_CONSOLE = "115200 ttyMSM0"
