meta-qti-bsp: qcs605-32: Switch QCS605 to 32bit
Change Build for QCS605 to 32bit with hard float.

Change-Id: I01cfe1bc99457bb84d86e46aab310788bad395d8

--- a/conf/machine/qcs605.conf
+++ b/conf/machine/qcs605.conf
@@ -4,7 +4,9 @@
 
 require conf/machine/include/qcs605.inc
 
-KERNEL_IMAGETYPE = "Image.gz-dtb"
+DEFAULTTUNE = "armv7ahf-neon"
+
+KERNEL_IMAGETYPE = "zImage-dtb"
 
 KERNEL_DTS_NAME = "qcs605"
 KERNEL_BASE = "0x80000000"
@@ -36,9 +38,7 @@ IMAGE_INITSCRIPTS = ""
 # Disable journalling for RO rootfs. Set the block size to 1024.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
-# Multilib configuration
-# This sets any packages preprended with lib32- to be built with
-# the armv7a tuning (32 bit) instead of 64 bit aarch.
+#Need for compiling UEFI for aarch64
 require conf/multilib.conf
-MULTILIBS = "multilib:lib32"
-DEFAULTTUNE_virtclass-multilib-lib32 = "armv7a-neon"
+MULTILIBS = "multilib:lib64"
+DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
