meta-qti-bsp:Generate persist image for qcs405-som1.
Change-Id: I45a26a542d254fcd38b9125d361570a2e498d2b7

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -18,7 +18,7 @@ RECOVERY_IMAGE = "0"
 
 KERNEL_IMAGETYPE = "Image.gz-dtb"
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
-
+DISTRO_FEATURES += "persist-image"
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
