meta-qti-bsp:system-prop:Resolve socket dependency.
persist-prop.service needs /dev/socket/leprop-service socket.

Change-Id: Ia8fe48322f5f34feca5e52ab4f3cf540a2da3a42

--- a/recipes-bsp/system-prop/files/persist-prop.service
+++ b/recipes-bsp/system-prop/files/persist-prop.service
@@ -4,7 +4,8 @@ After=leprop.service
 Requires=leprop.service
 
 [Service]
-ExecStart=/usr/bin/setprop le.persistprop.enable true
+ExecStart=/sbin/persist-prop.sh
+Type=oneshot
 
 [Install]
 WantedBy=multi-user.target
