meta-qti-bsp: add ab-boot-support for robot-som variant
Change-Id: I890ecc1e5d1927a17f7bc58a3be843d4fd30b889

--- a/conf/distro/robot-som.conf
+++ b/conf/distro/robot-som.conf
@@ -15,3 +15,5 @@ PREFERRED_VERSION_linux-msm = "4.9"
 DISTRO_FEATURES_append = " audio-dlkm"
 
 SERIAL_CONSOLE = "115200 ttyMSM0"
+
+DISTRO_FEATURES_append = " ab-boot-support"
