qcs40x: Set adreno as preferred provider of libgles1/2 and egl
Change-Id: Id0b2b4540a65ce8924bd6233b1522cf122567c11

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -32,3 +32,8 @@ KERNEL_IMAGETYPE = "zImage-dtb"
 require conf/multilib.conf
 MULTILIBS = "multilib:lib64"
 DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
+
+PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
+PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
+PREFERRED_PROVIDER_virtual/egl      = "adreno"
+
