--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -25,4 +25,7 @@ DISTRO_FEATURES += "persist-image"
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "armv7ahf-neon"
+PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
+PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
+PREFERRED_PROVIDER_virtual/egl      = "adreno"
 
