OTA is disabled in robot-som-ros because it does not need OTA
Change-Id: I316408b3edd328a54be919508ef738241d5d300c

--- a/conf/distro/robot-som-ros.conf
+++ b/conf/distro/robot-som-ros.conf
@@ -8,6 +8,7 @@ PRODUCT = "robot-som"
 
 #Ros needs larger system size
 SYSTEM_SIZE_EXT4 = "838860800"
+RECOVERY_IMAGE = "0"
 
 PREFERRED_VERSION_v4l-utils = "1.6.2"
 
