Enable sdllvm 6.0 feature for sdx55(prairie)
Change-Id: Id86369bc7625ae674d3454a83a9c9d75849198c2

--- a/conf/machine/sdxprairie.conf
+++ b/conf/machine/sdxprairie.conf
@@ -15,3 +15,4 @@ KERNEL_CMD_PARAMS = "noinitrd ro rootwait console=ttyMSM0,115200,n8 androidboot.
 KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8 androidboot.console=ttyMSM0', '', d)}"
 
 VIRTUAL-RUNTIME_init_manager = "busybox"
+LLVM_VERSION = "6.0"
