qcs405-som1: enable ab-boot
Change-Id: Ibc84353f858e8029ffb7c2e08074c060f59dbfc9

--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -29,3 +29,4 @@ PREFERRED_PROVIDER_virtual/libgles1 = "adreno"
 PREFERRED_PROVIDER_virtual/libgles2 = "adreno"
 PREFERRED_PROVIDER_virtual/egl      = "adreno"
 
+DISTRO_FEATURES += "ab-boot-support"
