meta-qti-bsp: Add DISTRO_FEATURES_append for qcs403-som2 conf
- Added DISTRO_FEATURES flag for qcs403-som2 conf file
  to avoid compilation errors depending on audiodlkm.

Change-Id: Iaf85b19fb1344e2bef8e2fe8a585a92535359134

--- a/conf/machine/qcs403-som2.conf
+++ b/conf/machine/qcs403-som2.conf
@@ -22,6 +22,9 @@ SYSTEMRW_VOLUME_SIZE ?= "6MiB"
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ubi"
 
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
 DEFAULTTUNE = "armv7ahf-neon"
 
 RECOVERY_IMAGE = "0"
